--- a/pages/receptionist.html
+++ b/pages/receptionist.html
@@ -63,19 +63,23 @@
     <div class="mb-5">
       <!-- Lateset version -->
       <div class="card mb-3">
-        <h5 class="card-header">V1.0.2 (Mới nhất) - 23/04/2025</h5>
+        <h5 class="card-header">V1.0.3 (Mới nhất) - 07/07/2025</h5>
         <div class="card-body">
           <h5 class="card-title">Chi tiết cập nhật:</h5>
           <ul>
-            <li>Cải thiện hiệu suất & ổn định</li>
+            <li>Thay đổi nguồn khách đặt bàn</li>
+            <li>
+              Tự động hoàn thành lịch đặt bàn nếu đơn bàn đã được thanh toán
+            </li>
+            <!-- Bỏ qua việc tải lại dữ liệu lịch đặt bàn nếu không cần thiết (android) -->
           </ul>
           <a
-            href="/assets/files/reception/android/A_Reception_V102_Tablet.apk"
+            href="/assets/files/reception/android/A_Reception_V103_Tablet.apk"
             class="btn btn-primary"
             ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
           >
           <a
-            href="/assets/files/reception/windowns/A_Reception_V102_Desktop.exe"
+            href="/assets/files/reception/windowns/A_Reception_V103_Desktop.exe"
             class="btn btn-primary"
             ><i class="bi bi-windows"></i> Tải xuống cho Windows (PC)</a
           >
@@ -92,6 +96,26 @@
         >Phiên bản cũ hơn ↓</a
       >
       <div id="oldVersion" class="collapse">
+        <!-- 1.0.2 + 3 -->
+        <div class="card mb-3">
+          <h5 class="card-header">V1.0.2 (Mới nhất) - 23/04/2025</h5>
+          <div class="card-body">
+            <h5 class="card-title">Chi tiết cập nhật:</h5>
+            <ul>
+              <li>Cải thiện hiệu suất & ổn định</li>
+            </ul>
+            <a
+              href="/assets/files/reception/android/A_Reception_V102_Tablet.apk"
+              class="btn btn-primary"
+              ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
+            >
+            <a
+              href="/assets/files/reception/windowns/A_Reception_V102_Desktop.exe"
+              class="btn btn-primary"
+              ><i class="bi bi-windows"></i> Tải xuống cho Windows (PC)</a
+            >
+          </div>
+        </div>
         <!-- 1.0.1 + 2 -->
         <div class="card mb-3">
           <h5 class="card-header">V1.0.1 - 26/03/2025</h5>
