--- a/pages/receptionist.html
+++ b/pages/receptionist.html
@@ -104,14 +104,10 @@
             <ul>
               <li>Cải thiện hiệu suất & ổn định</li>
             </ul>
-            <a
-              href="/assets/files/reception/android/A_Reception_V102_Tablet.apk"
-              class="btn btn-primary"
+            <a href="#" class="btn btn-primary"
               ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
             >
-            <a
-              href="/assets/files/reception/windowns/A_Reception_V102_Desktop.exe"
-              class="btn btn-primary"
+            <a href="#" class="btn btn-primary"
               ><i class="bi bi-windows"></i> Tải xuống cho Windows (PC)</a
             >
           </div>
@@ -124,14 +120,10 @@
             <ul>
               <li>Cải tiến hiển thị lịch</li>
             </ul>
-            <a
-              href="/assets/files/reception/android/A_Reception_V101_Tablet.apk"
-              class="btn btn-primary"
+            <a href="#" class="btn btn-primary"
               ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
             >
-            <a
-              href="/assets/files/reception/windowns/A_Reception_V101_Desktop.exe"
-              class="btn btn-primary"
+            <a href="#" class="btn btn-primary"
               ><i class="bi bi-windows"></i> Tải xuống cho Windows (PC)</a
             >
           </div>
@@ -144,14 +136,10 @@
             <ul>
               <li>Phát hành phiên bản</li>
             </ul>
-            <a
-              href="/assets/files/reception/android/A_Reception_V100_Tablet.apk"
-              class="btn btn-primary"
+            <a href="#" class="btn btn-primary"
               ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
             >
-            <a
-              href="/assets/files/reception/windowns/A_Reception_V100_Desktop.exe"
-              class="btn btn-primary"
+            <a href="#" class="btn btn-primary"
               ><i class="bi bi-windows"></i> Tải xuống cho Windows (PC)</a
             >
           </div>
