--- a/pages/apos.html
+++ b/pages/apos.html
@@ -55,20 +55,17 @@
   <div class="mb-5">
     <!-- Lateset version -->
     <div class="card mb-3">
-      <h5 class="card-header">V2.5.8.1 (Mới nhất) - 24/07/2025</h5>
+      <h5 class="card-header">V2.5.8.2 (Mới nhất) - 05/08/2025</h5>
       <div class="card-body">
         <h5 class="card-title">Chi tiết cập nhật:</h5>
         <ul>
-          <li>Hotfix nhảy con trỏ khi nhập dữ liệu</li>
-          <li>Lỗi không nhập được email hoá đơn có chứa dấu gạch dưới "_"</li>
+          <li>Cập nhật view hiển thị giảm giá</li>
         </ul>
-        <a href="/assets/files/apos/android/APOS_V258_1_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+        <a href="/assets/files/apos/android/APOS_V258_2_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
           xuống cho Tablet</a>
-        <a href="/assets/files/apos/windows/APOS_V258_1_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+        <a href="/assets/files/apos/windows/APOS_V258_2_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
           xuống cho Windows (PC)</a>
       </div>
-      <p class="text-danger fw-bold">- Nếu NH chưa cập nhật V2.5.8, có thể cập nhật luôn bản này.
-      </p>
     </div>
     <!-- End lateset version -->
   </div>
@@ -76,6 +73,23 @@
   <div class="mb-5">
     <a class="btn btn-secondary mb-3" data-bs-toggle="collapse" href="#oldVersion">Phiên bản cũ hơn ↓</a>
     <div id="oldVersion" class="collapse">
+      <!-- 2.5.8.1 -->
+      <div class="card mb-3">
+        <h5 class="card-header">V2.5.8.1 - 24/07/2025</h5>
+        <div class="card-body">
+          <h5 class="card-title">Chi tiết cập nhật:</h5>
+          <ul>
+            <li>Hotfix nhảy con trỏ khi nhập dữ liệu</li>
+            <li>Lỗi không nhập được email hoá đơn có chứa dấu gạch dưới "_"</li>
+          </ul>
+          <a href="/assets/files/apos/android/APOS_V258_1_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+            xuống cho Tablet</a>
+          <a href="/assets/files/apos/windows/APOS_V258_1_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+            xuống cho Windows (PC)</a>
+        </div>
+        <p class="text-danger fw-bold">- Nếu NH chưa cập nhật V2.5.8, có thể cập nhật luôn bản này.
+        </p>
+      </div>
       <!-- 2.5.8 -->
       <div class="card mb-3">
         <h5 class="card-header">V2.5.8 - 22/07/2025</h5>
