--- a/pages/apos-lite.html
+++ b/pages/apos-lite.html
@@ -62,7 +62,7 @@
     <div class="mb-5">
       <!-- Lateset version -->
       <div class="card mb-3">
-        <h5 class="card-header">V1.0.1 (Mới nhất) - 11/08/2025</h5>
+        <h5 class="card-header">V1.0.2 (Mới nhất) - 14/08/2025</h5>
         <div class="card-body">
           <h5 class="card-title">Chi tiết cập nhật:</h5>
           <ul>
@@ -74,7 +74,7 @@
             ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
           > -->
           <a
-            href="/assets/files/apos_lite/windows/APOS_Lite_V101_Desktop.exe"
+            href="/assets/files/apos_lite/windows/APOS_Lite_V102_Desktop.exe"
             class="btn btn-primary"
             ><i class="bi bi-windows"></i> Tải xuống cho Windows (PC)</a
           >
@@ -91,6 +91,26 @@
         >Phiên bản cũ hơn ↓</a
       >
       <div id="oldVersion" class="collapse">
+        <!-- 1.0.1 -->
+        <div class="card mb-3">
+          <h5 class="card-header">V1.0.1 - 11/08/2025</h5>
+          <div class="card-body">
+            <h5 class="card-title">Chi tiết cập nhật:</h5>
+            <ul>
+              <li>Triển khai mã giảm đồng giá theo số khách</li>
+            </ul>
+            <!-- <a
+              href="/assets/files/reception/android/A_Reception_V102_Tablet.apk"
+              class="btn btn-primary"
+              ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
+            > -->
+            <a
+              href="/assets/files/apos_lite/windows/APOS_Lite_V101_Desktop.exe"
+              class="btn btn-primary"
+              ><i class="bi bi-windows"></i> Tải xuống cho Windows (PC)</a
+            >
+          </div>
+        </div>
         <!-- 1.0.0 -->
         <div class="card mb-3">
           <h5 class="card-header">V1.0.0 (Mới nhất) - 16/06/2025</h5>
