--- a/pages/apos.html
+++ b/pages/apos.html
@@ -55,15 +55,15 @@
   <div class="mb-5">
     <!-- Lateset version -->
     <div class="card mb-3">
-      <h5 class="card-header">V2.5.8.2 (Mới nhất) - 05/08/2025</h5>
+      <h5 class="card-header">V2.5.9 (Mới nhất) - 20/08/2025</h5>
       <div class="card-body">
         <h5 class="card-title">Chi tiết cập nhật:</h5>
         <ul>
-          <li>Cập nhật view hiển thị giảm giá</li>
+          <li>Cập nhật chức năng tìm kiếm món bán</li>
         </ul>
-        <a href="/assets/files/apos/android/APOS_V258_2_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+        <a href="/assets/files/apos/android/APOS_V259_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
           xuống cho Tablet</a>
-        <a href="/assets/files/apos/windows/APOS_V258_2_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+        <a href="/assets/files/apos/windows/APOS_V259_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
           xuống cho Windows (PC)</a>
       </div>
     </div>
@@ -73,6 +73,20 @@
   <div class="mb-5">
     <a class="btn btn-secondary mb-3" data-bs-toggle="collapse" href="#oldVersion">Phiên bản cũ hơn ↓</a>
     <div id="oldVersion" class="collapse">
+      <!-- 2.5.8.2 -->
+      <div class="card mb-3">
+        <h5 class="card-header">V2.5.8.2 - 05/08/2025</h5>
+        <div class="card-body">
+          <h5 class="card-title">Chi tiết cập nhật:</h5>
+          <ul>
+            <li>Cập nhật view hiển thị giảm giá</li>
+          </ul>
+          <a href="/assets/files/apos/android/APOS_V258_2_Tablet.apk" class="btn btn-primary"><i class="bi bi-android2"></i> Tải
+            xuống cho Tablet</a>
+          <a href="/assets/files/apos/windows/APOS_V258_2_Desktop.exe" class="btn btn-primary"><i class="bi bi-windows"></i> Tải
+            xuống cho Windows (PC)</a>
+        </div>
+      </div>
       <!-- 2.5.8.1 -->
       <div class="card mb-3">
         <h5 class="card-header">V2.5.8.1 - 24/07/2025</h5>
