--- a/pages/apos-lite.html
+++ b/pages/apos-lite.html
@@ -62,15 +62,11 @@
     <div class="mb-5">
       <!-- Lateset version -->
       <div class="card mb-3">
-        <h5 class="card-header">V1.0.3 (Mới nhất) - 10/09/2025</h5>
+        <h5 class="card-header">V1.0.4 (Mới nhất) - 11/09/2025</h5>
         <div class="card-body">
           <h5 class="card-title">Chi tiết cập nhật:</h5>
           <ul>
-            <li>
-              Phân bổ lại tiền thuế các đơn mang về với hình thức thanh toán
-              Grab, Shopee
-            </li>
-            <li>Cập nhật giao diện nhập mã giảm giá</li>
+            <li>Sửa lỗi thanh toán Payoo</li>
           </ul>
           <!-- <a
             href="/assets/files/reception/android/A_Reception_V102_Tablet.apk"
@@ -78,7 +74,7 @@
             ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
           > -->
           <a
-            href="/assets/files/apos_lite/windows/APOS_Lite_V103_Desktop.exe"
+            href="/assets/files/apos_lite/windows/APOS_Lite_V104_Desktop.exe"
             class="btn btn-primary"
             ><i class="bi bi-windows"></i> Tải xuống cho Windows (PC)</a
           >
@@ -95,6 +91,30 @@
         >Phiên bản cũ hơn ↓</a
       >
       <div id="oldVersion" class="collapse">
+        <!-- 1.0.3 -->
+        <div class="card mb-3">
+          <h5 class="card-header">V1.0.3 - 10/09/2025</h5>
+          <div class="card-body">
+            <h5 class="card-title">Chi tiết cập nhật:</h5>
+            <ul>
+              <li>
+                Phân bổ lại tiền thuế các đơn mang về với hình thức thanh toán
+                Grab, Shopee
+              </li>
+              <li>Cập nhật giao diện nhập mã giảm giá</li>
+            </ul>
+            <!-- <a
+              href="/assets/files/reception/android/A_Reception_V102_Tablet.apk"
+              class="btn btn-primary"
+              ><i class="bi bi-android2"></i> Tải xuống cho Tablet</a
+            > -->
+            <a
+              href="/assets/files/apos_lite/windows/APOS_Lite_V103_Desktop.exe"
+              class="btn btn-primary"
+              ><i class="bi bi-windows"></i> Tải xuống cho Windows (PC)</a
+            >
+          </div>
+        </div>
         <!-- 1.0.2 -->
         <div class="card mb-3">
           <h5 class="card-header">V1.0.2 - 14/08/2025</h5>
